--- a/css/login.css
+++ b/css/login.css
@@ -82,3 +82,26 @@ header nav.menu-desktop ul li {
     display: inline-block;
     padding: 0 40px;
 }
+
+button {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: white;
+    font-size: 16px;
+}
+
+.btn-primary {
+    background: linear-gradient(135deg, #000000, #7c7878);
+}
+
+.btn-secondary {
+    background: linear-gradient(135deg, #000000, #8d8888);
+}
+
+.btn-danger {
+    background: linear-gradient(135deg, #000000, #8b8787);
+}
